# skfeaturellm

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CLAUDE.md  README.md  demo_statistics.py  pyproject.toml
.github/workflows/: ci-cd.yml  ci.yaml  ci.yml
docs/: api_reference.rst  conf.py  examples.rst  get_started.rst  index.rst  installation.rst  requirements.txt  user_guide.rst
examples/: 01_SKFeatureLLM_HousingCalifornia_Tutorial.ipynb  01_SKFeatureLLM_Tutorial.ipynb
skfeaturellm/: __init__.py  exceptions.py  feature_engineer.py  feature_engineering_transformer.py  feature_evaluation.py  feature_transformer.py  llm_factory.py  llm_interface.py  prompts.py  reporting.py  schemas.py
skfeaturellm/dsl/: __init__.py  operations.py  types.py
skfeaturellm/feature_evaluation/: __init__.py  _report_template.html  evaluator.py  metrics.py  result.py  visualizations.py
skfeaturellm/prompts/: __init__.py  utils.py
skfeaturellm/transformations/: __init__.py  arithmetic.py  base.py  executor.py  pipeline.py
skfeaturellm/transformations/binary/: __init__.py  arithmetic.py  (+1 more)
skfeaturellm/transformers/: __init__.py  additive.py  base.py  exception.py  schemas.py
skfeaturellm/utils/: validation.py
tests/: test_feature_engineer.py  test_feature_engineering_transformer.py  test_feature_evaluation.py  test_feature_transformer.py  test_llm_interface.py  test_transformations.py
tests/feature_evaluation/: conftest.py  test_evaluator.py  test_visualizations.py
tests/transformations/: __init__.py  conftest.py  test_binary.py  test_binning.py  test_executor.py  test_pipeline.py  test_unary.py
tests/transformers/: test_additive.py
(+3 files in other folders)
