[tool.poetry]
name = "skfeaturellm"
version = "0.1.0"
description = "LLM-powered feature engineering with scikit-learn API compatibility"
authors = ["Roberto Corti"]
readme = "README.md"
packages = [{include = "skfeaturellm"}]
license = "MIT"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[tool.poetry.dependencies]
python = "^3.10"
scikit-learn = "^1.0.0"
pandas = "^1.3.0"
numpy = "^1.20.0"
langchain = "^0.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
black = "^23.0.0"
isort = "^5.0.0"
mypy = "^1.0.0"
flake8 = "^6.0.0" 